WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128257
IDB: storage/indexeddb/mozilla/autoincrement-indexes.html fails
https://bugs.webkit.org/show_bug.cgi?id=128257
Summary
IDB: storage/indexeddb/mozilla/autoincrement-indexes.html fails
Brady Eidson
Reported
2014-02-05 10:26:42 PST
IDB: storage/indexeddb/mozilla/autoincrement-indexes.html fails - The schema of the index record table is out of whack - We mess up storing auto generated keys in indexes - After the above are fixed, something is preventing us from returning that auto generated id in the result of an index.get()
Attachments
Patch v1
(20.55 KB, patch)
2014-02-05 15:24 PST
,
Brady Eidson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2014-02-05 15:14:03 PST
(In reply to
comment #0
)
> IDB: storage/indexeddb/mozilla/autoincrement-indexes.html fails > ... > - After the above are fixed, something is preventing us from returning that auto generated id in the result of an index.get()
This was because the IDBGetResult shipped back from the database process did not contain the object store key path when it was needed.
Radar WebKit Bug Importer
Comment 2
2014-02-05 15:21:56 PST
<
rdar://problem/15995237
>
Brady Eidson
Comment 3
2014-02-05 15:24:16 PST
Created
attachment 223271
[details]
Patch v1
WebKit Commit Bot
Comment 4
2014-02-05 15:26:23 PST
Attachment 223271
[details]
did not pass style-queue: ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.h:77: The parameter name "result" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/UniqueIDBDatabaseBackingStore.h:74: The parameter name "result" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 5
2014-02-05 15:55:35 PST
http://trac.webkit.org/changeset/163482
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug